# ayp2_plantilla_tp1_2c2023

./: CMakeLists.txt  README.md
include/: Item.hpp  Vector.hpp
src/: Item.cpp  Vector.cpp
tests/: CMakeLists.txt  VectorTemplateTests.cpp  VectorTests.cpp
